Fod: Implement FodScreenOffHandler
Required for our screen off fod impl

Change-Id: Ia78e8dfb22ad3eadbc2e59738b287ed2cb017b7b

squash

Change-Id: Ib5dc2743d63cf1c008e6940a22c8d23f1abe2103

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -223,4 +223,10 @@
     <!-- Whether device supports variable refresh rate -->
     <bool name="config_hasVariableRefreshRate">false</bool>
 
+    <!-- Library path of screen off fod handler -->
+    <string name="config_fodScreenOffHandlerLib" translatable="false"></string>
+
+    <!-- Class name of screen off fod handler -->
+    <string name="config_fodScreenOffHandlerClass" translatable="false"></string>
+
 </resources>
