--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -88,4 +88,10 @@
     <!-- Whether device supports variable refresh rate -->
     <java-symbol type="bool" name="config_hasVariableRefreshRate" />
 
+    <!-- Library path of screen off fod handler -->
+    <java-symbol type="string" name="config_fodScreenOffHandlerLib" />
+
+    <!-- Class name of screen off fod handler -->
+    <java-symbol type="string" name="config_fodScreenOffHandlerClass" />
+
 </resources>
