Fod: Implement FodScreenStateReceiver
Required for our screen off fod impl

Change-Id: Ia78e8dfb22ad3eadbc2e59738b287ed2cb017b7b

--- a/core/res/res/values/custom_config.xml
+++ b/core/res/res/values/custom_config.xml
@@ -223,4 +223,10 @@
     <!-- Whether device supports variable refresh rate -->
     <bool name="config_hasVariableRefreshRate">false</bool>
 
+    <!-- Library path of fod screen state receiver -->
+    <string name="config_fodScreenStateReceiverLib" translatable="false"></string>
+
+    <!-- Class name of fod screen state receiver -->
+    <string name="config_fodScreenStateReceiverClass" translatable="false"></string>
+
 </resources>
