--- a/packages/SystemUI/res/values/customx_strings.xml
+++ b/packages/SystemUI/res/values/customx_strings.xml
@@ -96,4 +96,12 @@
     <string name="global_action_current_user">Current</string>
     <string name="global_action_users">Users</string>
 
+    <!-- App Lock -->
+    <string name="applock_locked">&#160;is locked</string>
+    <string name="applock_fingerprint_face">, fingerprint or your face to unlock</string>
+    <string name="applock_face">&#160;or your face to unlock</string>
+    <string name="applock_fingerprint">&#160;or your fingerprint to unlock</string>
+    <string name="applock_credential">&#160;to unlock</string>
+    <string name="applock_unlock">Unlock</string>
+
 </resources>
