SystemUI: add app volume row to volume dialog
Signed-off-by: cjybyjk <cjybyjk@zjnu.edu.cn>
Change-Id: Ide78f3d27c3c0077ddf96279e3cac4f60f31411e

--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -62,4 +62,6 @@
     <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
     <dimen name="global_actions_avatar_size">24dp</dimen>
 
+    <!-- Per app volume -->
+    <dimen name="volume_row_app_icon_padding">8dp</dimen>
 </resources>
