frameworks: Power menu customizations for R
* Forward-port the rest of power menu customizations to R (airplane mode, screenshot, lockdown, bugreport, user switcher).
* Screenshot option will always show by default and can be turned off in Settings.
* Cleanup some no-longer-necessary variables.
* Move constants back to the SDK.
* Use the new LineageGlobalActionsService to get user's configuration

jhenrique09 edits: Adapt to PE

Includes the commit below:
Author: Michael Bestas <mikeioannina@gmail.com>
Date:   Sat Jan 31 06:06:38 2015 +0200

    GlobalActions: Use circular user avatars

    * Use circular & smaller avatars, logic copied from SystemUI
    * Improve current user indication (thanks to maxwen)

    Change-Id: I81e6c4afd604f5cb8b22e2c4db9b174bbe7fb3f0
    Ticket-Id: OPO-456, CYNGNOS-1901

Signed-off-by: Gegham Zakaryan <zakaryan.2004@outlook.com>
Change-Id: Id0ea8ef3009e8e028ddf47698af94663cb33d49a

--- a/packages/SystemUI/res/values/custom_dimens.xml
+++ b/packages/SystemUI/res/values/custom_dimens.xml
@@ -59,4 +59,7 @@
     <!-- Margin on the right side of the center clock -->
     <dimen name="status_bar_center_clock_padding_end">0dp</dimen>
 
+    <!-- Largest size an avatar might need to be drawn in the power menu user picker -->
+    <dimen name="global_actions_avatar_size">24dp</dimen>
+
 </resources>
