--- a/packages/SystemUI/res/values/customx_strings.xml
+++ b/packages/SystemUI/res/values/customx_strings.xml
@@ -92,4 +92,7 @@
     <!-- Anti flicker QS tile -->
     <string name="quick_settings_anti_flicker">Anti flicker</string>
 
+    <!-- Label for current user in power menu options dialog -->
+    <string name="global_action_current_user">Current</string>
+
 </resources>
