--- a/packages/SystemUI/res/values/customx_strings.xml
+++ b/packages/SystemUI/res/values/customx_strings.xml
@@ -94,5 +94,6 @@
 
     <!-- Label for current user in power menu options dialog -->
     <string name="global_action_current_user">Current</string>
+    <string name="global_action_users">Users</string>
 
 </resources>
