--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -22,5 +22,6 @@
 
     <!-- Label for current user in power menu options dialog -->
     <string name="global_action_current_user">Current</string>
+    <string name="global_action_users">Users</string>
 
 </resources>
