Biometrics: Allow to switch from face to fingerprint when possible
Change-Id: I6e57aa3c8ff18a40897bfedd59d4298a6ab1c200

--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -20,4 +20,7 @@
      <!-- Biometric Dialog - Use Face -->
     <string name="biometric_dialog_button_use_face">Use Face</string>
 
+     <!-- Biometric Dialog - Use Fingerprint -->
+    <string name="biometric_dialog_button_use_fingerprint">Use Fingerprint</string>
+
 </resources>
