--- a/packages/SystemUI/res/layout/auth_biometric_contents.xml
+++ b/packages/SystemUI/res/layout/auth_biometric_contents.xml
@@ -66,6 +66,16 @@
         android:maxLines="2"
         android:text="@string/biometric_dialog_button_use_fingerprint"/>
 
+    <!-- Use Face Button -->
+    <Button android:id="@+id/button_use_face"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@*android:style/Widget.DeviceDefault.Button.Borderless.Colored"
+        android:layout_gravity="center_vertical"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:text="@string/biometric_dialog_button_use_face"/>
+
     <LinearLayout
         android:id="@+id/button_bar"
         android:layout_width="match_parent"
@@ -102,16 +112,6 @@
             android:maxWidth="@dimen/biometric_dialog_button_positive_max_width"
             android:text="@string/biometric_dialog_confirm"
             android:visibility="gone"/>
-        <!-- Use Face Button -->
-        <Button android:id="@+id/button_use_face"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@*android:style/Widget.DeviceDefault.Button.Colored"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:maxWidth="@dimen/biometric_dialog_button_positive_max_width"
-            android:text="@string/biometric_dialog_button_use_face"/>
         <!-- Try Again Button -->
         <Button android:id="@+id/button_try_again"
             android:layout_width="wrap_content"
